load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "be04b635c7be4604be1ef20542e9870af3c49778ce841ee2d92fcb42f9d9516a",
    strip_prefix = "rules_python-0.35.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.35.0/rules_python-0.35.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python3",
    python_version = "3.12",
)

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pypi_cov",
    python_interpreter_target = "@python3_host//:python",
    requirements_lock = "//tools:cov_requirements_lock.txt",
)

load("@pypi_cov//:requirements.bzl", cov_install_deps = "install_deps")

cov_install_deps()

pip_parse(
    name = "pypi_nox",
    python_interpreter_target = "@python3_host//:python",
    requirements_lock = "//tools:nox_requirements_lock.txt",
)

load("@pypi_nox//:requirements.bzl", nox_install_deps = "install_deps")

nox_install_deps()
